#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.50)
AC_INIT(OgreNewt, 1.53)
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE([1.6.1 foreign no-installinfo no-installman subdir-objects])

# Checks for programs.
AC_LANG([C++])
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([memory.h stddef.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MEMCMP

# Check for Ogre
PKG_CHECK_MODULES(OGRE, OGRE >= 1.4.0)

# Check for Newton
AC_CHECK_LIB([Newton], [fopen], [], AC_MSG_ERROR([Can't find libNewton]))
AC_CHECK_HEADERS([Newton.h], , AC_MSG_ERROR([Can't find Newton headers]))

AC_CONFIG_FILES([Makefile
                 include/Makefile
                 src/Makefile
                 OgreNewt.pc])
AC_OUTPUT
