AC_PREREQ(2.50)

AC_INIT(DSA4WZ, 1.33.0)
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([1.6.1 foreign no-installinfo no-installman subdir-objects])

dnl Check for programs
AC_LANG([C++])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AM_PROG_LIBTOOL


dnl GCC ersion check
if test x$GCC = xyes; then
    AC_MSG_CHECKING([version 3.x of gcc])
    if test -n "`$CC --version 2>&1|grep '3.'`"; then
        AC_DEFINE(EXT_HASH, 1, Use old STL hash options)
        AC_DEFINE(GCC_3_1, 1, 3.x GCC version)
        AC_MSG_RESULT(yes);
    else
        AC_MSG_RESULT(no)
    fi
fi

# ***** DEBUGGING
AC_ARG_ENABLE(debug,[  --enable-debug          enable debugging [default=no]])
if test "$enable_debug" = "yes"; then
    CXXFLAGS=" $CXXFLAGS -g -D_DEBUG -O0"
else
    CXXFLAGS=" $CXXFLAGS -O2 "
fi


# *** XERCES-C
AC_ARG_WITH(xercesc, [  --with-xercesc=path  compile with xercesc path],
	xercesc_path="$withval", xercesc_path="/usr")
AC_CHECK_LIB(xerces-c, main,
	[ AC_MSG_CHECKING(for Xerces-C location)
      if test -f "$xercesc_path/lib/libxerces-c.so"; then
      	AC_MSG_RESULT([found in $xercesc_path])
        XERCESC_LIBS=" -lxerces-c "
        XERCESC_LDFLAGS=" -L$xercesc_path/lib "
        CXXFLAGS=" $CXXFLAGS -I$xercesc_path/include "
     else
        AC_MSG_RESULT([not found in $xercesc_path])
      fi
    ], [AC_MSG_ERROR([cannot find the libxerces library])], [-lpthread] )


# *** STLPORT
AC_ARG_WITH(stlport, [  --with-stlport=path  compile with stlport path],
	stlport_path="$withval", stlport_path="/usr")
AC_CHECK_LIB(stlport, main,
	[ AC_MSG_CHECKING(for STLPORT location)
      if test -f "$stlport_path/lib/libstlport.so"; then
      	AC_MSG_RESULT(found in $stlport_path)
        STLPORT_LIBS=" -lstlport "
        STLPORT_LDFLAGS=" -L$stlport_path/lib "
        CXXFLAGS=" -I$stlport_path/include $CXXFLAGS "
      else
        AC_MSG_RESULT(not found in $stlport_path);
      fi
    ])



dnl Other stuff we need
AC_CHECK_FUNC(snprintf, AC_DEFINE(HAVE_SNPRINTF,,snprintf))
AC_CHECK_FUNC(vsnprintf, AC_DEFINE(HAVE_VSNPRINTF,1,vsnprintf))
AC_CHECK_PROG(HAVE_DOXYGEN_PROG, doxygen, `which doxygen`, false)
AC_CHECK_LIB(pthread, pthread_create)

AC_SUBST(XERCESC_LIBS)
AC_SUBST(XERCESC_LDFLAGS)
AC_SUBST(STLPORT_LIBS)
AC_SUBST(STLPORT_LDFLAGS)

dnl Create the makefiles
AC_CONFIG_FILES([Makefile include/Makefile Dsa4Wz.pc])

AC_OUTPUT

