AC_PREREQ(2.50)

AC_INIT(OpenSteer, 0.11.0)
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([1.6.1 foreign no-installinfo no-installman subdir-objects])

dnl Check for programs
AC_LANG([C++])
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_C_O
AC_PROG_INSTALL
AM_PROG_LIBTOOL


dnl GCC ersion check
if test x$GCC = xyes; then
    AC_MSG_CHECKING([version 3.x of gcc])
    if test -n "`$CC --version 2>&1|grep '3.'`"; then
        AC_DEFINE(EXT_HASH, 1, Use old STL hash options)
        AC_DEFINE(GCC_3_1, 1, 3.x GCC version)
        AC_MSG_RESULT(yes);
    else
        AC_MSG_RESULT(no);
    fi
fi

CXXFLAGS="$CXXFLAGS -DNOT_OPENSTEERDEMO -DOPENSTEER -Wall "
# ***** DEBUGGING
AC_ARG_ENABLE(debug,[  --enable-debug          enable debugging [default=no]])
if test "$enable_debug" = "yes"; then
    CXXFLAGS="$CXXFLAGS -g -O0 -DDEBUG -DVERBOSE -DSTATS "
else
	CXXFLAGS="$CXXFLAGS "
fi

AC_ARG_ENABLE(optimize,[  --enable-optimize       enable optimized build [default=no]])
if test "$enable_optimize" = "yes"; then
 	CXXFLAGS="$CXXFLAGS -ffast-math -O2"
else
    CXXFLAGS="$CXXFLAGS -ffast-math -O3"
fi

# Pthreads
CXXFLAGS="$CXXFLAGS -pthread"

# Ogre
PKG_CHECK_MODULES([OGRE], [OGRE >= 1.4.0])

dnl Create the makefiles
AC_CONFIG_FILES([Makefile \
		src/Makefile include/Makefile
    ])

AC_OUTPUT

