AC_PREREQ(2.50)

AC_INIT(OpenSteer, 0.9.0)
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([1.6.1 foreign no-installinfo no-installman subdir-objects])

dnl Check for programs
AC_LANG([C++])
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_C_O
AC_PROG_INSTALL
AM_PROG_LIBTOOL

CXXFLAGS="$CXXFLAGS -DNOT_OPENSTEERDEMO -DOPENSTEER -Wall "

# ***** DEBUGGING
AC_ARG_ENABLE(debug,[  --enable-debug          enable debugging [default=no]])
if test "$enable_debug" = "yes"; then
    CXXFLAGS="$CXXFLAGS -g -O0 -DDEBUG -DVERBOSE -DSTATS "
else
	CXXFLAGS="$CXXFLAGS "
fi

AC_ARG_ENABLE(optimize,[  --enable-optimize       enable optimized build [default=no]])
if test "$enable_optimize" = "yes"; then
 	CXXFLAGS="$CXXFLAGS -ffast-math -O2"
else
    CXXFLAGS="$CXXFLAGS -ffast-math -O3"
fi

# Pthreads
CXXFLAGS="$CXXFLAGS -pthread"

# Ogre
PKG_CHECK_MODULES([OGRE], [OGRE >= 1.4.0])

dnl Create the makefiles
AC_CONFIG_FILES([Makefile
		 src/Makefile
                 include/Makefile
                 opensteer.pc])

AC_OUTPUT

